--- a/Personal Spotify Music Trends Analysis.ipynb
+++ b/Personal Spotify Music Trends Analysis.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "# Personal Spotify Music Trends Analysis\n",
     "\n",
-    "[This Blog Post](https://www.ivaylopavlov.com/?p=2018&preview=true) contains a guide on how to set up a Developer App and authenticate the Web API requests to query successfully.\n",
+    "[This Blog Post](https://www.ivaylopavlov.com/personal-spotify-music-trend-analysis/) contains a guide on how to set up a Developer App and authenticate the Web API requests to query successfully.\n",
     "\n",
     "#### by Ivaylo Pavlov (12 Jan 2020)"
    ]
