--- a/Personal Spotify Music Trends Analysis.ipynb
+++ b/Personal Spotify Music Trends Analysis.ipynb
@@ -1136,10 +1136,10 @@
     "\n",
     "for df_item in trends_set:\n",
     "    dict_data = df_item['ref'].to_dict(orient='index')\n",
-    "    track_list = {v['id']: v['popularity'] for k,v in dict_data.items()}\n",
+    "    track_popularity = {v['id']: v['popularity'] for k,v in dict_data.items()}\n",
     "\n",
     "    try:\n",
-    "        tracks_list_features = sp.audio_features(track_list.keys())\n",
+    "        tracks_list_features = sp.audio_features(track_popularity.keys())\n",
     "    except:\n",
     "        print(\"Couldn't get Track Features Analytics\")\n",
     "        continue\n",
@@ -1147,7 +1147,7 @@
     "    track_analytics = None        \n",
     "    collect_column_name = True\n",
     "    for a in tracks_list_features:\n",
-    "        a['popularity'] = v['popularity']\n",
+    "        a['popularity'] = track_popularity[a['id']]\n",
     "        \n",
     "        if collect_column_name:\n",
     "            track_analytics = pd.DataFrame(columns=list(a.keys()))\n",
